# eka-ci

./: .gitignore  DESIGN.md  README.md  flake.nix
.github/workflows/: audit.yml  backend.yml  nix.yml
backend/: Cargo.toml  README.md  config.toml  ekaci-test.2025-05-07.private-key.pem
backend/client/: Cargo.toml
backend/client/src/: error.rs  main.rs  requests.rs  server_client.rs
backend/client/src/cli/: mod.rs
backend/evaluator/: Cargo.toml
backend/evaluator/src/: main.rs
backend/evaluator/src/cli/: mod.rs
backend/server/: Cargo.toml
backend/server/sql/migrations/: 20250329_pr_request.sql  20250420_drv_build.sql  20250426_drv.sql
backend/server/src/: client.rs  config.rs  db.rs  derivation.rs  error.rs  github.rs  main.rs  web.rs
backend/server/src/cli/: mod.rs
backend/server/src/client/: handler.rs  listener.rs  mod.rs
backend/server/src/db/: get.rs  insert.rs  mod.rs  model.rs  service.rs
backend/server/src/db/model/: build.rs  drv.rs  git.rs
backend/server/src/db/sqlite/: inserts.rs  mod.rs
backend/server/src/eval/: mod.rs
backend/server/src/github/: mod.rs
backend/server/src/nix/: jobs.rs  mod.rs  nix_eval_jobs.rs
backend/server/src/types/: mod.rs
backend/server/src/web/: repositories.rs
backend/shared/: Cargo.toml
backend/shared/src/: dirs.rs  lib.rs
backend/shared/src/types/: mod.rs
frontend/: .gitignore
frontend/src/: Main.elm
frontend/static/: index.html  main.css
nix/: dev-server.nix  dev-shell.nix  eka-ci.nix  overlay.nix  web-up.nix
