[workspace]
resolver = "2"
members = [
  "client",
  "evaluator",
  "server", "shared",
]

[workspace.dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = {version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
xdg = "2.5"
