[workspace]
resolver = "2"
members = [
  "client",
  "evaluator",
  "server", "shared",
]

[workspace.dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.20", features = ["derive"] }
serde = {version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
shared = { path = "./shared" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xdg = "2.5"
