[package]
name = "eka_ci_server"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
description = "Continuous Integration server for Nix"
repository = "https://github.com/ekala-project/eka-ci"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.3", features = ["tokio", "tracing", "json"] }
axum-reverse-proxy = { version = "0.8.0", default-features = false, optional = true }
clap = { workspace = true }
http = "1.3.1"
jsonwebtoken = "9.3.0"
octocrab = "0.41.2"
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xdg = { workspace = true }

[features]
# Allow proxying requests to the SPA bundle through this server.
#
# Enables an additional CLI argument `--bundle-port` that allows specifying a local port where all
# requests for the frontend will be forwarded to. Websocket upgrade requests will be forwarded as
# well.
#
# This feature is primarily intended to allow hot reloading of the frontend during development.
# Accessing the hot reloading server directly breaks when the frontend tries to issue API requests
# using relative paths (such as `/api/repos`), as those would be forwarded to the hot reloading
# server as well. By proxying the request through this server, all relative links work as expected.
bundle-proxy = ["dep:axum-reverse-proxy"]
