[package]
name = "eka_ci_server"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
description = "Continuous Integration server for Nix"
repository = "https://github.com/ekala-project/eka-ci"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.3", features = ["tokio", "tracing", "json"] }
clap = { workspace = true }
envy = "0.4.2"
figment = { version = "0.10.19", features = ["env", "toml"] }
http = "1.3.1"
jsonwebtoken = "9.3.0"
octocrab = "0.41.2"
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite" ], no-default-features = true }
thiserror = { workspace = true }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xdg = { workspace = true }
