[package]
name = "eka_ci_server"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
description = "Continuous Integration server for Nix"
repository = "https://github.com/ekala-project/eka-ci"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.3", features = ["tokio", "tracing", "json"] }
chrono = { version = "0.4.40", default-features = false, features = ["now", "std"] }
clap = { workspace = true }
envy = "0.4.2"
figment = { version = "0.10.19", features = ["env", "toml"] }
gix-hash = "0.17.0"
gix-url = "0.30.0"
http = "1.3.1"
jsonwebtoken = "9.3.0"
octocrab = "0.41.2"
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { version = "0.8.5", features = [ "runtime-tokio", "sqlite", "migrate", "macros" ], default-features = false }
thiserror = { workspace = true }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xdg = { workspace = true }
